--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fes-phases-integration",
+  "name": "banking-widgets-demo",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -14,7 +14,6 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "axios": "^1.9.0",
     "vue": "3.5.13",
     "vue-router": "4.5.0"
   },
