Redirect SCA changes

--- a/capacitor-vue-app/capacitor.config.json
+++ b/capacitor-vue-app/capacitor.config.json
@@ -3,6 +3,7 @@
   "appName": "Banking Widgets Demo",
   "webDir": "dist",
   "server": {
-    "androidScheme": "https"
+    "androidScheme": "bwd",
+    "iosScheme": "bwd"
   }
 }
