--- a/capacitor-vue-app/package.json
+++ b/capacitor-vue-app/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "local:dev": "vite",
     "postbuild": "node scripts/copy-wc-assets.js",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
@@ -20,10 +20,11 @@
     "cap:run:android": "npm run build && cap sync android && cap run android"
   },
   "dependencies": {
-    "@banksapitechnology/bam-web-component": "1.5.0",
+    "@banksapitechnology/bam-web-component": "1.6.0",
     "@banksapitechnology/embeddable-finance-web-components": "1.4.0",
     "@banksapitechnology/regprotect-web-component": "1.6.1",
     "@capacitor/android": "7.4.4",
+    "@capacitor/app": "7.1.0",
     "@capacitor/cli": "7.4.4",
     "@capacitor/core": "7.4.4",
     "@capacitor/ios": "7.4.4",
