--- a/capacitor-vue-app/package.json
+++ b/capacitor-vue-app/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "local:dev": "vite",
+    "local:dev": "node scripts/copy-wc-assets-dev.js && vite",
     "postbuild": "node scripts/copy-wc-assets.js",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
@@ -20,9 +20,9 @@
     "cap:run:android": "npm run build && cap sync android && cap run android"
   },
   "dependencies": {
-    "@banksapitechnology/bam-web-component": "1.8.0",
-    "@banksapitechnology/embeddable-finance-web-components": "1.6.0",
-    "@banksapitechnology/regprotect-web-component": "^1.10.0",
+    "@banksapitechnology/bam-web-component": "1.9.0",
+    "@banksapitechnology/embeddable-finance-web-components": "1.7.0",
+    "@banksapitechnology/regprotect-web-component": "1.10.0",
     "@capacitor/android": "7.4.4",
     "@capacitor/app": "7.1.0",
     "@capacitor/cli": "7.4.4",
